--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Contact Page</title>
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+
 <body>
-     <!----Responsive Nav Bar-->
+    <!----Responsive Nav Bar-->
     <nav class="bg-green-100 p-3 flex justify-between items-center shadow-xl sticky top-0 z-10">
         <h1 class="text-4xl font-bold"> Greenden </h1>
 
@@ -31,34 +33,42 @@
 
     <!--Contact Page-->
 
-    <section class="bg-white dark:bg-gray-900">
-  <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
-      <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us</h2>
-      <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Got a technical issue? Want to send feedback about a beta feature? Need details about our Business plan? Let us know.</p>
-      <form action="#" class="space-y-8">
-          <div>
-              <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your email</label>
-              <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light" placeholder="name@flowbite.com" required>
-          </div>
-          <div>
-              <label for="subject" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label>
-              <input type="text" id="subject" class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light" placeholder="Let us know how we can help you" required>
-          </div>
-          <div class="sm:col-span-2">
-              <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Your message</label>
-              <textarea id="message" rows="6" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Leave a comment..."></textarea>
-          </div>
-          <button type="submit" class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-primary-700 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Send message</button>
-      </form>
-  </div>
-</section>
+    <!-- Contact Section -->
+    <section class="m-5 p-5">
+        <h2 class="text-3xl font-bold mb-4 text-center">Contact Us</h2>
+        <p class="text-gray-600 mb-6 text-center">Have a question or feedback? We'd love to hear from you!</p>
 
-      <!--Footer-->
+        <div class="text-center space-y-4">
+            <div>
+                <label class="block mb-1 font-semibold text-left">Your Email</label>
+                <input type="email" placeholder="name@example.com"
+                    class="border rounded w-full p-2 hover:border-green-500">
+            </div>
+
+            <div>
+                <label class="block mb-1 font-semibold text-left">Subject</label>
+                <input type="text" placeholder="Let us know how we can help you"
+                    class="border rounded w-full p-2 hover:border-green-500">
+            </div>
+
+            <div>
+                <label class="block mb-1 font-semibold text-left">Your Message</label>
+                <textarea placeholder="Write your message here..."
+                    class="border rounded w-full p-2 hover:border-green-500"></textarea>
+            </div>
+
+            <button class="bg-green-600 text-white rounded w-40 hover:bg-green-700">Send Message</button>
+        </div>
+    </section>
+
+    <!--Footer-->
     <section class="bg-green-100  p-5 text-center">
         <h1 class="text-3xl font-bold mt-3"> Greenden </h1>
-        <p class="mt-3"> The Standard chunk of Lorem ipsum used since the 1500s is reproduced below for those interest </p>
+        <p class="mt-3"> The Standard chunk of Lorem ipsum used since the 1500s is reproduced below for those interest
+        </p>
         <p class="mt-3"> &copy; 2025 Greenden.com </p>
     </section>
 
 </body>
+
 </html>
