--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,14 @@
 <body>
     <!----Responsive Nav Bar-->
     <nav class="bg-green-100 p-3 flex justify-between items-center shadow-xl sticky top-0 z-10">
-        <h1 class="text-4xl font-bold"> Greenden </h1>
+        <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold"> Greenden </h1>
 
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5" stroke="currentColor"
             className="size-6" class="w-5 h-5 md:hidden">
             <path strokeLinecap="round" strokeLinejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
 
-        <ul class="flex gap-3 text-gray-600 hidden md:flex">
+        <ul class="flex gap-2 sm:gap-4 text-gray-600 hidden md:flex">
             <li>
                 <a class="hover:underline  hover:text-black" href="index.html"> Home </a>
             </li>
@@ -34,35 +34,35 @@
     <!--Contact Page-->
 
     <!-- Contact Section -->
-    <section class="m-5 p-5">
-        <h2 class="text-3xl font-bold mb-4 text-center">Contact Us</h2>
-        <p class="text-gray-600 mb-6 text-center">Have a question or feedback? We'd love to hear from you!</p>
+    <section class="m-5 p-5 mt-8">
+        <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold mb-4 text-center">Contact Us</h2>
+        <p class="text-sm sm:text-base lg:text-lg text-center text-gray-600 mb-6">Have a question or feedback? We'd love to hear from you!</p>
 
         <div class="text-center space-y-4">
-            <div>
+            <div class="mb-4">
                 <label class="block mb-1 font-semibold text-left">Your Email</label>
                 <input type="email" placeholder="name@example.com"
                     class="border rounded w-full p-2 hover:border-green-500">
             </div>
 
-            <div>
+            <div  class="mb-4">
                 <label class="block mb-1 font-semibold text-left">Subject</label>
                 <input type="text" placeholder="Let us know how we can help you"
                     class="border rounded w-full p-2 hover:border-green-500">
             </div>
 
-            <div>
+            <div class="mb-4">
                 <label class="block mb-1 font-semibold text-left">Your Message</label>
                 <textarea placeholder="Write your message here..."
                     class="border rounded w-full p-2 hover:border-green-500"></textarea>
             </div>
 
-            <button class="bg-green-600 text-white rounded w-40 hover:bg-green-700">Send Message</button>
+            <button class="bg-green-600 mt-4 py-2 px-4 text-white rounded w-40 hover:bg-green-700">Send Message</button>
         </div>
     </section>
 
     <!--Footer-->
-    <section class="bg-green-100  p-5 text-center">
+    <section class="bg-green-100  p-5 text-center mt-10">
         <h1 class="text-3xl font-bold mt-3"> Greenden </h1>
         <p class="mt-3"> The Standard chunk of Lorem ipsum used since the 1500s is reproduced below for those interest
         </p>
