--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <!----Responsive Nav Bar-->
     <nav class="bg-green-100 p-3 flex justify-between items-center shadow-xl sticky top-0 z-10">
-        <h1 class="text-4xl font-bold"> Greenden </h1>
+        <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold"> Greenden </h1>
 
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5" stroke="currentColor"
             className="size-6" class="w-5 h-5 md:hidden">
             <path strokeLinecap="round" strokeLinejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
 
-        <ul class="flex gap-3 text-gray-600 hidden md:flex">
+        <ul class="flex gap-2 sm:gap-4 text-gray-600 hidden md:flex">
             <li>
                 <a class="hover:underline  hover:text-black" href="index.html"> Home </a>
             </li>
@@ -35,10 +35,10 @@
     <section class=" bg-green-100 p-3 md:p-10 flex justify-around">
 
         <div>
-            <p class="mb-4"> We offer you a wide range of Artificial and Natural Flowers </p>
-            <h2 class="font-bold text-3xl md:text-5xl mb-3"> Plant for your Interior </h2>
+            <p class="text-3xl sm:text-4xl lg:text-5xl font-bold"> Bring nature into your home </p>
+            <h2 class="text-sm sm:text-base lg:text-lg"> Find the perfect plant to brighten up your space. </h2>
             <div class="mb-5">
-                <button class="bg-black rounded p-2 text-white italic"> Shop Now </button>
+                <button class="bg-green-500 hover:bg-green-600 text-white px-4 sm:px-6 py-2 sm:py-3 rounded"> Shop Now </button>
                 <button class="bg-black rounded p-2 text-white italic"> Watch Video </button>
             </div>
 
@@ -242,7 +242,7 @@
     </section>
 
     <!--Footer-->
-    <section class="bg-green-100  p-5 text-center">
+    <section class="bg-green-100  p-5 text-center mt-10">
         <h1 class="text-3xl font-bold mt-3"> Greenden </h1>
         <p class="mt-3"> The Standard chunk of Lorem ipsum used since the 1500s is reproduced below for those interest
         </p>
