--- a/product.html
+++ b/product.html
@@ -10,14 +10,14 @@
 
     <!----Responsive Nav Bar-->
     <nav class="bg-green-100 p-3 flex justify-between items-center shadow-xl sticky top-0 z-10">
-        <h1 class="text-4xl font-bold"> Greenden </h1>
+        <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold"> Greenden </h1>
 
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5" stroke="currentColor"
             className="size-6" class="w-5 h-5 md:hidden">
             <path strokeLinecap="round" strokeLinejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
 
-        <ul class="flex gap-3 text-gray-600 hidden md:flex">
+        <ul class="flex gap-2 sm:gap-4 text-gray-600 hidden md:flex">
             <li>
                 <a class="hover:underline  hover:text-black" href="index.html"> Home </a>
             </li>
@@ -32,7 +32,7 @@
 
     <!--Header-->
     <section class="p-5 m-3 text-center">
-        <h1 class="font-bold text-4xl mb-3"> Our Products </h1>
+        <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-3 text-center"> Our Products </h1>
         <input type="text" class="border border-black h-10" style="width: 50%" placeholder="Search for a product">
     </section>
 
@@ -92,7 +92,7 @@
     </section>
     
      <!--Footer-->
-    <section class="bg-green-100  p-5 text-center">
+    <section class="bg-green-100  p-5 text-center mt-10">
         <h1 class="text-3xl font-bold mt-3"> Greenden </h1>
         <p class="mt-3"> The Standard chunk of Lorem ipsum used since the 1500s is reproduced below for those interest </p>
         <p class="mt-3"> &copy; 2025 Greenden.com </p>
